Add initial styles

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿<html>
-<head>
-    <title>Public NewsPaper</title>
-</head>
-<body>
+﻿@{
+    ViewData["Title"] = "PublicNewsPaper";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
     <h2>Welcome to the Public NewsPaper!</h2>
-</body>
-</html>
