--- a/Views/Stories/Index.cshtml
+++ b/Views/Stories/Index.cshtml
@@ -4,10 +4,16 @@
 }
 @model IEnumerable<PublicNewsPaper.Models.Story>
 
-    <h2>Public NewsPaper</h2>
-    <ul>
-        @foreach (var listStory in Model)
-        {
-            <li>@Html.DisplayFor(modelStory => listStory.Description) | @Html.ActionLink("Details", "Details", new { id = listStory.StoryId })</li>
-        }
-    </ul>
+<h2>Welcome to the Public NewsPaper!</h2>
+
+<hr />
+<h4>@Html.DisplayNameFor(model => model.Description)</h4>
+<ul>
+    @foreach (var listItem in Model)
+    {
+        <li>@Html.DisplayFor(modelItem => listItem.Description) | @Html.ActionLink("Details", "Details", new { id = listItem.StoryId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.StoryId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.StoryId })</li>
+    }
+</ul>
+<p>@Html.ActionLink("Add new item", "Create")</p>
+
+@Html.ActionLink("Home", "Index", "Home")
