--- a/Views/Stories/Details.cshtml
+++ b/Views/Stories/Details.cshtml
@@ -6,5 +6,13 @@
 
     <h2>Details</h2>
     <hr />
-    @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
+    <p>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</p>
+    <p>@Html.DisplayNameFor(model => model.CategoryId): @Html.DisplayFor(model => model.CategoryId)</p>
+    <p>Category Name: Show category name here</p>
+   
+
+
+    
+
+
     <p>@Html.ActionLink("Back to list", "Index")</p>
