Add about and contact pages

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><p>@Html.ActionLink("Home", "Index", "Home")</p></li>
-                    <li><p>@Html.ActionLink("About", "Index", "Home")</p></li>
-                    <li><p>@Html.ActionLink("Contact", "Index", "Home")</p></li>
+                    <li><p>@Html.ActionLink("About", "About", "Home")</p></li>
+                    <li><p>@Html.ActionLink("Contact", "Contact", "Home")</p></li>
                 </ul>
             </div>
         </div>
